--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -151,7 +151,7 @@
   background-image: url(assets/image/naver-blog.png);
 }
 
-.logo-dark-icon {
+/* .logo-dark-icon {
   background-image: url(assets/image/logo-dark.png);
 }
 
@@ -165,4 +165,4 @@
 
 .check-ring-light-icon {
   background-image: url(assets/image/check-ring-light.png);
-}
+} */
