--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -151,7 +151,7 @@
   background-image: url(assets/image/naver-blog.png);
 }
 
-/* .logo-dark-icon {
+.logo-dark-icon {
   background-image: url(assets/image/logo-dark.png);
 }
 
@@ -159,7 +159,7 @@
   background-image: url(assets/image/search-light.png);
 }
 
-.check-round-fill-icon {
+/* .check-round-fill-icon {
   background-image: url(assets/image/check-round-fill.png);
 }
 
