--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -159,10 +159,10 @@
   background-image: url(assets/image/search-light.png);
 }
 
-/* .check-round-fill-icon {
+.check-round-fill-icon {
   background-image: url(assets/image/check-round-fill.png);
 }
 
 .check-ring-light-icon {
   background-image: url(assets/image/check-ring-light.png);
-} */
+}
