--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -1,5 +1,10 @@
 /*이 css는 공통적으로 많이 쓰이는 css를 설정하는곳이다*/
 
+.divider {
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  width: 100%;
+}
+
 .black-button {
   border-radius: 46px;
   width: 95px;
@@ -165,4 +170,12 @@
 
 .check-ring-light-icon {
   background-image: url(assets/image/check-ring-light.png);
+}
+
+.image-box-light-icon {
+  background-image: url(assets/image/image-box-light.png);
+}
+
+.close-icon {
+  background-image: url(assets/image/close.png);
 }
