--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -179,3 +179,7 @@
 .close-icon {
   background-image: url(assets/image/close.png);
 }
+
+.more-icon {
+  background-image: url(assets/image/more.png);
+}
