--- a/board-front/src/views/Board/Detail/style.css
+++ b/board-front/src/views/Board/Detail/style.css
@@ -52,7 +52,7 @@
   height: 32px;
 
   background-position: 50% 50%;
-  background-image: 100% 100%;
+  background-size: 100% 100%;
 }
 
 .board-detail-write-info-box {
