--- a/board-front/src/App.css
+++ b/board-front/src/App.css
@@ -128,6 +128,15 @@
   justify-content: center;
 }
 
+.icon-box-large {
+  width: 40px;
+  height: 40px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .icon-box-small {
   width: 16px;
   height: 16px;
@@ -240,4 +249,12 @@
 
 .comment-icon {
   background-image: url(assets/image/chat-light.png);
+}
+
+.edit-icon {
+  background-image: url(assets/image/edit-light.png);
+}
+
+.image-box-white-icon {
+  background-image: url(assets/image/image-box-white-light.png);
 }
